# MapleUI

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h
include/MapleUI/: MapleUI.h  context.h  define.h  event.h  window.h
include/MapleUI/opengl_util/: general.h
include/MapleUI/widget/: object.h
src/: CMakeLists.txt  context.cpp  window.cpp
src/opengl_util/: general.cpp
tests/: CMakeLists.txt  _temp_gpu_fix.cpp  test1.cpp  test2.cpp
